--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Simon Says HTML5 Game made in ReactJS",
   "main": "index.js",
   "babel": {
-    "presets": ["latest","react"]
+    "presets": [
+      "latest",
+      "react"
+    ]
   },
   "scripts": {
     "start": "http-server",
     "postinstall": "grunt copy:libs",
-    "build" : "browserify --debug app/src/app.tsx -p [ tsify ] -o  app/app-bundle-ts.js",
+    "build": "browserify --debug app/src/app.tsx -p [ tsify ] -o  app/app-bundle-ts.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,8 +31,10 @@
     "babelify": "^7.3.0",
     "grunt": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
+    "howler": "^2.0.0",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "rxjs-es": "^5.0.0-beta.12"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
