--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,11 @@
         "module": "none",
         "noImplicitAny": false,
         "jsx": "react",
-        "typeRoots" : ["./typings"],
         "sourceMap": true
     },
     "include": [
         "app/src/**/*",
-        "typings/**/*"
+        "typings/index.d.ts"
     ],
     "exclude": [
         "node_modules",
